# Rust

./: .gitmodules  README.md
Assignments/Assignment2/Q1/: Cargo.toml
Assignments/Assignment2/Q2/: Cargo.toml
Assignments/Assignment4/q_2/: Cargo.toml
Assignments/Assignment5/src/: main
Quarter 1/crates/ss/: Cargo.toml
Quarter 2/embedded_rust/: commands.txt
Quarter 2/kiss3d/: Cargo.toml
Quarter 2/opencv/: Cargo.toml
Quarter 3/Assignments/Assignment 2/client_server/: Cargo.toml
Quarter 3/Assignments/Assignment 2/client_server/src/: akamai.rs  main.rs  servers.rs
Quarter 3/client_server/: Cargo.toml
Quarter 4/: Building Conversational  Chatbots using API.AI.pptx  Callback and Promise in JavaScript.pptx  DialogFlow Fulfillment via Node JS.pptx  Follow-Up intent in Dailogflow.pptx  How to use Actions on Google Client Library Microsoft Azure Function.pptx  Integration on Dailogflow.pptx  Introduction to JavaScript.pptx  http-server.txt  task.txt
Quarter 4/JS/: first.html  first.js  node_server.js
Quarter 4/Rasberry/: How To Configure WiFi on Raspberry Pi_ Step By Step Tutorial - Latest Open Tech From Seeed.html  Readme.txt  wpa_supplicant.conf
Quarter 4/class05/: index.html  kommunicate.html
Quarter 4/class12/: index.js  package-lock.json  package.json
Quarter 4/class13/: package-lock.json  package.json  server.js
Quarter 4/class14/: get_temp.js  index.js  package-lock.json  package.json
Quarter 4/df-class09b/: index.js  package-lock.json  package.json
class_assignment/assg1/: Cargo.toml
class_assignment/read_file/: Cargo.toml
(+248 files in other folders)
