[package]
name = "client_server"
version = "0.1.0"
authors = ["themohal <farjadmohal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
async-std = "1.9.0"
h2 = "0.3.0"
http = "0.2"
tokio = { version = "1", features = ["full"] }
env_logger = "0.8.2"
